feat: 태그 저장/수정 시 null 방어 로직 추가 및 안정성 개선